--- a/1introduction.tex
+++ b/1introduction.tex
@@ -1,1 +1,5 @@
 \section*{Introduction}
+\begin{enumerate}
+    \item Update von Dagmars paper
+    \item Orientierung an equator network (STARE-HI)
+\end{enumerate}
