--- a/main.tex
+++ b/main.tex
@@ -4,10 +4,34 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage{xcolor}
 \pagenumbering{gobble}
-\usepackage[babel]{csquotes}
+\usepackage{csquotes}
 \usepackage[style=numeric,maxbibnames=100,backend=biber]{biblatex}
+
+%%%%%%%%%%%%%%%%%%%%%%
+%% implement ORCID Icons in authors
+\usepackage{tikz}
+\usetikzlibrary{svg.path}
+\definecolor{orcidlogocol}{HTML}{A6CE39}
+\tikzset{
+  orcidlogo/.pic={
+    \fill[orcidlogocol] svg{M256,128c0,70.7-57.3,128-128,128C57.3,256,0,198.7,0,128C0,57.3,57.3,0,128,0C198.7,0,256,57.3,256,128z};
+    \fill[white] svg{M86.3,186.2H70.9V79.1h15.4v48.4V186.2z}
+                 svg{M108.9,79.1h41.6c39.6,0,57,28.3,57,53.6c0,27.5-21.5,53.6-56.8,53.6h-41.8V79.1z M124.3,172.4h24.5c34.9,0,42.9-26.5,42.9-39.7c0-21.5-13.7-39.7-43.7-39.7h-23.7V172.4z}
+                 svg{M88.7,56.8c0,5.5-4.5,10.1-10.1,10.1c-5.6,0-10.1-4.6-10.1-10.1c0-5.6,4.5-10.1,10.1-10.1C84.2,46.7,88.7,51.3,88.7,56.8z};
+  }
+}
+\newcommand\orcidicon[1]{\href{https://orcid.org/#1}{\mbox{\scalerel*{
+\begin{tikzpicture}[yscale=-1,transform shape]
+\pic{orcidlogo};
+\end{tikzpicture}
+}{|}}}}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \addbibresource{bibliography/biblio.bib}  
+
 
 % Keywords command
 \providecommand{\keywords}[1]
@@ -16,7 +40,7 @@
   \textbf{\textit{Keywords: }} #1
 }
 
-\title{Our titel}
+\title{An update of the Bachmann COMBINE archive}
 
 
 \date{} % Comment this line to show today's date
@@ -24,19 +48,21 @@
 \begin{document}
 \maketitle
 
-  \noindent\author{\textbf{Oliver H\"olsken$^{1}$, Felix Hans$^{2}$, Sami George Habib$^{3}$, Abel Hodelin Hernandez$^{3}$} \\ \\
+  \noindent\author{\textbf{Oliver H\"olsken$^{1}$, Felix Patricius Hans$^{2}$ %\orcidicon{0000-0002-7164-7624}
+  , Sami George Habib$^{3}$, Abel Hodelin Hernandez$^{3}$} \\ \\
 	\small $^{1}$Charité – Universitätsmedizin Berlin, Berlin, Germany \\
-	\small $^{2}$Medical Center - University of Freiburg, Freiburg, Germany \\
+	\small $^{2}$Medical Center - University of Freiburg, University Emergency Department, Freiburg, Germany \\
 	\small $^{3}$University Medical Center of the Johannes Gutenberg University Mainz, Mainz, Germany \\
 }
 \hrule
 \input{0abstract}
  \hspace{10pt}
 
-\keywords{COMBINE, containers, data}
+\keywords{Systems Biology, Computational Biology, Data Science, Medical Informatics, COMBINE, containers, data}
 
 \hrule
 
+\newpage
 \input{1introduction}
 
 \input{2methods}
@@ -45,9 +71,11 @@
 
 \input{4conclusions}
 
-\noindent\small \textbf{Authors' contribution:} ... \\ 
+\noindent\small \textbf{Authors' contribution:} The authors contributed equally to this work. \\ 
 \noindent\small \textbf{Competing interests:} The authors declare no competing interests.\\
+\noindent\small \textbf{Funding:} None.\\
 \noindent\small \textbf{Acknoledgement:}...
+
 
 \nocite{*}           %  Die gesamte Literaturbibliothek wird eingefügt
 \printbibliography 
