--- a/1introduction.tex
+++ b/1introduction.tex
@@ -3,3 +3,6 @@
     \item Update von Dagmars paper
     \item Orientierung an equator network (STARE-HI)
 \end{enumerate}
+
+Sami und Felix machen Ergebnisse\\
+Oliver und Abel machen Methoden
