--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
 \maketitle
 
   \noindent\author{\textbf{Oliver H\"olsken$^{1}$, Felix Patricius Hans$^{2}$ %\orcidicon{0000-0002-7164-7624}
-  , Sami George Habib$^{3}$, Abel Hodelin Hernandez$^{3}$} \\ \\
+  , Sami Habib$^{3}$, Abel Hodelin Hernandez$^{3}$} \\ \\
 	\small $^{1}$Charité – Universitätsmedizin Berlin, Berlin, Germany \\
 	\small $^{2}$Medical Center - University of Freiburg, University Emergency Department, Freiburg, Germany \\
 	\small $^{3}$University Medical Center of the Johannes Gutenberg University Mainz, Mainz, Germany \\
