--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 \pagenumbering{gobble}
 \usepackage{csquotes}
 \usepackage[style=numeric,maxbibnames=100,backend=biber]{biblatex}
+\usepackage{acronym} 
 
 %%%%%%%%%%%%%%%%%%%%%%
 %% implement ORCID Icons in authors
@@ -76,6 +77,7 @@
 \noindent\small \textbf{Funding:} None.\\
 \noindent\small \textbf{Acknoledgement:}...
 
+\input{5abbreviation.tex}
 
 \nocite{*}           %  Die gesamte Literaturbibliothek wird eingefügt
 \printbibliography 
