Initial text in methods

--- a/2methods.tex
+++ b/2methods.tex
@@ -1,1 +1,4 @@
 \section*{Materials and methods}
+To provide the Bachmann model as a Fully Featured COMBINE Archive, we have created a public repository using the open-source platform git hub, with a CC0-1.0 License. This repository contains the proposal directory's structure of the paper Scharm and Waltemath \cite{combine} with the directories documentation, model, experiment, and result. We chose this open-source platform because it has some features for documentation and agile project management.
+
+The work on this project was divided into four groups. The tasks of each group were reviewing existing materials, creating documentation templates, comparison of provided models, provision of detailed metadata, graphical representation, and supplying of model-script.
