Updates from Overleaf

--- a/0abstract.tex
+++ b/0abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract}
-\noindent\textbf{Introduction}:....\cite{combine}\\
+\noindent\textbf{Introduction}: The increase of size and complexity of simulation studies in systems biology and systems medicine proposes new challenges to sharing reproducible results. The Computational Modeling in Biology Network (COMBINE) improves the coordination of standard formats for several features of simulation studies .\cite{combine} On the other side, GitHub has been used as an essential common platform for managing software projects and supporting collaborative development \cite{github}.\\
 \textbf{Methods}: \\
 \textbf{Results}: \\
 \textbf{Conclusions}: \\
