--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -7,3 +7,25 @@
 	number = "2421",
 	doi = "https://doi.org/10.12688/f1000research.9379.1" 
 }
+
+@article{bachmannmodel,
+    author = {Bachmann, Julie and Raue, Andreas and Schilling, Marcel and Böhm, Martin E and Kreutz, Clemens and Kaschek, Daniel and Busch, Hauke and Gretz, Norbert and Lehmann, Wolf D and Timmer, Jens and Klingmüller, Ursula},
+    title = {Division of labor by dual feedback regulators controls JAK2/STAT5 signaling over broad ligand range},
+    journal = {Molecular Systems Biology},
+    volume = {7},
+    number = {1},
+    pages = {516},
+    keywords = {apoptosis, erythropoietin, mathematical modeling, negative feedback, SOCS},
+    doi = {https://doi.org/10.1038/msb.2011.50},
+    %url = {https://www.embopress.org/doi/abs/10.1038/msb.2011.50},
+    %eprint = {https://www.embopress.org/doi/pdf/10.1038/msb.2011.50},
+    year = {2011}
+}
+
+@INPROCEEDINGS{github,
+    author={Joseph Feliciano and Margaret-Anne Storey and Alexey Zagalsky},
+    booktitle={2016 IEEE/ACM 38th International Conference on Software Engineering Companion (ICSE-C)},   title={Student Experiences Using GitHub in Software Engineering Courses: A Case Study},  
+    year={2016},  
+    pages={422-431},  
+    isbn={978-1-5090-2245-8}
+}
