--- a/main.tex
+++ b/main.tex
@@ -50,17 +50,18 @@
 \begin{document}
 \maketitle
 
-  \noindent\author{\textbf{Oliver H\"olsken$^{1}$~\orcidlink{0000-0001-6086-9275}, Felix Patricius Hans$^{2}$~\orcidlink{0000-0002-7164-7624}, Sami Habib$^{3}$, Abel Hodelin Hernandez$^{3}$~\orcidlink{0000-0002-4295-9899}} \\ \\
-	\small $^{1}$Charité – Universitätsmedizin Berlin, Berlin, Germany \\
+  \noindent\author{\textbf{Oliver H\"olsken$^{1,4}$~\orcidlink{0000-0001-6086-9275}, Felix Patricius Hans$^{2,4}$~\orcidlink{0000-0002-7164-7624}, Sami Habib$^{3,4}$, Abel Hodelin Hernandez$^{3,4}$~\orcidlink{0000-0002-4295-9899}} \\ \\
+	\small $^{1}$Medical School - Charité – University Medicine Berlin, Berlin, Germany \\
 	\small $^{2}$Medical Center - University of Freiburg, University Emergency Department, Freiburg, Germany \\
 	\small $^{3}$University Medical Center of the Johannes Gutenberg University Mainz, Mainz, Germany \\
+	\small $^{4}$Master - Biomedical Informatics and Data Science (BIDS), Hochschule Mannheim – University of Applied Sciences, Mannheim, Germany \\
 }
 
 \hrule
 \input{0abstract}
  \hspace{10pt}
 
-\keywords{Systems Biology, Computational Biology, Data Science, Medical Informatics, COMBINE, containers, data}
+\noindent\keywords{Systems Biology, Computational Biology, Data Science, Medical Informatics, COMBINE, containers, data}
 
 \hrule
 
