--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@
 	\small $^{1}$Medical School - Charité – University Medicine Berlin, Berlin, Germany \\
 	\small $^{2}$Medical Center - University of Freiburg, University Emergency Department, Freiburg, Germany \\
 	\small $^{3}$University Medical Center of the Johannes Gutenberg University Mainz, Mainz, Germany \\
-	\small $^{4}$Master - Biomedical Informatics and Data Science (BIDS), Hochschule Mannheim – University of Applied Sciences, Mannheim, Germany \\
+	\small $^{4}$Master - Biomedical Informatics and Data Science (BIDS), Hochschule Mannheim – University of Applied Sciences in collaboration with the Medical Informatics for Research and Care in University Medicine (MIRACUM Consortium), Germany \\
 }
 
 \hrule
