- Hyperlink package added - more methods added

--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 \usepackage{orcidlink}
 \pagenumbering{gobble}
 \usepackage{csquotes}
+\usepackage{hyperref}
 \usepackage[style=numeric,maxbibnames=100,backend=biber]{biblatex}
 \usepackage{acronym} 
 
