--- a/2methods.tex
+++ b/2methods.tex
@@ -1,4 +1,9 @@
 \section*{Materials and methods}
-To provide the Bachmann model \cite{bachmannmodel} as a Fully Featured COMBINE Archive, we have created a public repository using the open-source platform GitHub, with a CC0-1.0 License. This repository contains the proposal directory's structure of the paper Scharm \& Waltemath \cite{combine} with the directories documentation, model, experiment, and result. We chose this open-source platform because it has some features for documentation, data management, and agile project management \cite{github}.
 
-The work on this project was divided into four groups. The tasks of each of them were reviewing existing materials, creating documentation templates, comparison of provided models, provision of detailed metadata, graphical representation, and supplying of model-script.
+The purpose of this project was divided into four groups. The tasks of each of them were the management of a documentation platform, review of exiting materials, comparison of provided models, graphical representation, and supply of a model script.
+
+To provide the model from Bachmann \textit{et. al.}\cite{bachmannmodel} as a Fully Featured COMBINE Archive, we have created a public repository using the open-source platform GitHub, with a CC0-1.0 License. We choose GitHub as a data management platform to supervise the course of the project because it provides an intuitive and easy customizable environment, along with some features for documentation, and agile project management \cite{github}. This repository contains the proposal directory's structure from Scharm \& Waltemath \cite{combine} with the directories documentation, model, experiment, and result.
+
+To achieve this goal, we research the literature about the Bachmann model and the COMBINE Archive, along with modeling file formats, checking the reproducibility of the COMBINE structure and software tools that had been used. In addition, we established communication channels, developed a rough schedule, provided a template for documentation, and periodically reviewed intermediate deliverables. 
+
+In our research, we found six SBML-Bachmann models, one of them as support information of Bachmann \textit{et. al.} \cite{bachmannmodel}, this was the first delivered model. The others come from two different repositories, \hyperlink{https://www.systemsmedicine.net/posts/jws-online-biological-systems-modelling}{JWS Online} and \hyperlink{https://www.ebi.ac.uk/biomodels/}{BioModels}.
