--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -29,3 +29,102 @@
     pages={422-431},  
     isbn={978-1-5090-2245-8}
 }
+
+@article{jwsonline,
+    author = {Olivier, Brett G. and Snoep, Jacky L.},
+    title = "{Web-based kinetic modelling using JWS Online}",
+    journal = {Bioinformatics},
+    volume = {20},
+    number = {13},
+    pages = {2143-2144},
+    year = {2004},
+    month = {04},
+    %issn = {1367-4803},
+    doi = {10.1093/bioinformatics/bth200},
+    %url = {https://doi.org/10.1093/bioinformatics/bth200},
+   % eprint = {https://academic.oup.com/bioinformatics/article-pdf/20/13/2143/666386/bth200.pdf},
+}
+
+@article{copasi,
+	author = {Sahle, Sven  and Mendes, Pedro  and Hoops, Stefan  and Kummer, Ursula },
+	title = {A new strategy for assessing sensitivities in biochemical models},
+	journal = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+	volume = {366},
+	number = {1880},
+	pages = {3619-3631},
+	year = {2008},
+	doi = {10.1098/rsta.2008.0108},
+	%URL = {https://royalsocietypublishing.org/doi/abs/10.1098/rsta.2008.0108},
+	%eprint = {https://royalsocietypublishing.org/doi/pdf/10.1098/rsta.2008.0108},   
+}
+
+@article{sedml,
+	author = {Waltemath, Dagmar  and Adams, Richard  and Bergmann, Frank T.  and  Hucka, Michael and Kolpakov, Fedor and Miller, Andrew K. and Moraru, Ion I. and Nickerson, David and Sahle, Sven and Snoep, Jacky L. and Le Novère, Nicolas},
+	title = {Reproducible computational biology experiments with SED-ML - The Simulation Experiment Description Markup Language},
+	journal = {BMC Systems Biology},
+	volume = {5},
+	number = {198},
+	year = {2011},
+	doi = {10.1186/1752-0509-5-198},
+	%URL = {https://royalsocietypublishing.org/doi/abs/10.1098/rsta.2008.0108},
+	%eprint = {https://royalsocietypublishing.org/doi/pdf/10.1098/rsta.2008.0108},   
+}
+
+@article{tellurium,
+	author = {Medley, J. and Choi, Kiri and König, Matthias and Smith, Lucian and Gu, Stanley and Hellerstein, Joseph and Sealfon, Stuart and Sauro, Herbert},
+	year = {2018},
+	%month = {06},
+	%pages = {e1006220},
+	title = {Tellurium notebooks—An environment for reproducible dynamical modeling in systems biology},
+	volume = {14},
+	journal = {PLOS Computational Biology},
+	doi = {10.1371/journal.pcbi.1006220}
+}
+
+
+@article{sbgnnovere,
+	title = {The {Systems} {Biology} {Graphical} {Notation}},
+	volume = {27},
+	%copyright = {2009 Nature Publishing Group},
+	%issn = {1546-1696},
+	%url = {https://www.nature.com/articles/nbt.1558},
+	doi = {10.1038/nbt.1558},
+	number = {8},
+	%urldate = {2021-09-28},
+	journal = {Nature Biotechnology},
+	author = {Novère, Nicolas Le and Hucka, Michael and Mi, Huaiyu and Moodie, Stuart and Schreiber, Falk and Sorokin, Anatoly and Demir, Emek and Wegner, Katja and Aladjem, Mirit I. and Wimalaratne, Sarala M. and Bergman, Frank T. and Gauges, Ralph and Ghazal, Peter and Kawaji, Hideya and Li, Lu and Matsuoka, Yukiko and Villéger, Alice and Boyd, Sarah E. and Calzone, Laurence and Courtot, Melanie and Dogrusoz, Ugur and Freeman, Tom C. and Funahashi, Akira and Ghosh, Samik and Jouraku, Akiya and Kim, Sohyoung and Kolpakov, Fedor and Luna, Augustin and Sahle, Sven and Schmidt, Esther and Watterson, Steven and Wu, Guanming and Goryanin, Igor and Kell, Douglas B. and Sander, Chris and Sauro, Herbert and Snoep, Jacky L. and Kohn, Kurt and Kitano, Hiroaki},
+	%month = aug,
+	year = {2009},
+	pages = {735-741},
+}
+
+@article{sbgntoure,
+	title = {Quick tips for creating effective and impactful biological pathways using the {Systems} {Biology} {Graphical} {Notation}},
+	volume = {14},
+	%issn = {1553-7358},
+	%url = {https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005740},
+	doi = {10.1371/journal.pcbi.1005740},
+	%language = {en},
+	number = {2},
+	%urldate = {2021-09-28},
+	journal = {PLOS Computational Biology},
+	author = {Touré, Vasundra and Novère, Nicolas Le and Waltemath, Dagmar and Wolkenhauer, Olaf},
+	%month = feb,
+	year = {2018},
+	%pages = {e1005740},
+}
+
+@article{newteditor,
+    author = {Balci, Hasan and Siper, Metin Can and Saleh, Nasim and Safarli, Ilkin and Roy, Ludovic and Kilicarslan, Merve and Ozaydin, Rumeysa and Mazein, Alexander and Auffray, Charles and Babur, Özgün and Demir, Emek and Dogrusoz, Ugur},
+    title = "{Newt: a comprehensive web-based tool for viewing, constructing and analyzing biological maps}",
+    journal = {Bioinformatics},
+    volume = {37},
+    number = {10},
+    pages = {1475-1477},
+    year = {2020},
+    month = {11},
+    %issn = {1367-4803},
+    doi = {10.1093/bioinformatics/btaa850},
+    %url = {https://doi.org/10.1093/bioinformatics/btaa850},
+   % eprint = {https://academic.oup.com/bioinformatics/article-pdf/37/10/1475/38663820/btaa850.pdf},
+}
