--- a/main.tex
+++ b/main.tex
@@ -51,7 +51,7 @@
 \begin{document}
 \maketitle
 
-  \noindent\author{\textbf{Oliver H\"olsken$^{1,4}$~\orcidlink{0000-0001-6086-9275}, Felix Patricius Hans$^{2,4}$~\orcidlink{0000-0002-7164-7624}, Sami Habib$^{3,4}$, Abel Hodelin Hernandez$^{3,4}$~\orcidlink{0000-0002-4295-9899}} \\ \\
+  \noindent\author{\textbf{Oliver H\"olsken$^{1,4}$~\orcidlink{0000-0001-6086-9275}, Felix Patricius Hans$^{2,4}$~\orcidlink{0000-0002-7164-7624}, Sami Habib$^{3,4}$~\orcidlink{0000-0003-4087-2869}, Abel Hodelin Hernandez$^{3,4}$~\orcidlink{0000-0002-4295-9899}} \\ \\
 	\small $^{1}$Medical School - Charité – University Medicine Berlin, Berlin, Germany \\
 	\small $^{2}$Medical Center - University of Freiburg, University Emergency Department, Freiburg, Germany \\
 	\small $^{3}$University Medical Center of the Johannes Gutenberg University Mainz, Mainz, Germany \\
