- More Methods based on review from groups 1 to 3 - New literature was added

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -128,3 +128,46 @@
     %url = {https://doi.org/10.1093/bioinformatics/btaa850},
    % eprint = {https://academic.oup.com/bioinformatics/article-pdf/37/10/1475/38663820/btaa850.pdf},
 }
+
+@article{vanted,
+	title = {{VANTED} v2: a framework for systems biology applications},
+	volume = {6},
+	issn = {1752-0509},
+	%shorttitle = {{VANTED} v2},
+	%url = {https://doi.org/10.1186/1752-0509-6-139},
+	doi = {10.1186/1752-0509-6-139},
+	number = {1},
+	%urldate = {2021-09-28},
+	journal = {BMC Systems Biology},
+	author = {Rohn, Hendrik and Junker, Astrid and Hartmann, Anja and Grafahrend-Belau, Eva and Treutler, Hendrik and Klapperstück, Matthias and Czauderna, Tobias and Klukas, Christian and Schreiber, Falk},
+	%month = nov,
+	year = {2012},
+	%keywords = {-Omics, Biological networks, Data analysis, Data integration, Data visualization, Model simulation},
+	pages = {139}
+}
+
+@article{krayon,
+    author = {Frank T. Bergmann and Tobias Czauderna and Ugur Dogrusoz and Adrien Rougny and Andreas Dräger and Vasundra Touré and Alexander Mazein and Michael L. Blinov and Augustin Luna},
+    doi = {doi:10.1515/jib-2020-0016},
+    %url = {https://doi.org/10.1515/jib-2020-0016},
+    title = {Systems biology graphical notation markup language (SBGNML) version 0.3},
+    journal = {Journal of Integrative Bioinformatics},
+    number = {2-3},
+    volume = {17},
+    year = {2020},
+    %pages = {20200016}
+}
+
+@article{sbgnviz,
+    doi = {10.1371/journal.pone.0128985},
+    author = {Sari, Mecit AND Bahceci, Istemi AND Dogrusoz, Ugur AND Sumer, Selcuk Onur AND Aksoy, Bülent Arman AND Babur, Özgün AND Demir, Emek},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {SBGNViz: A Tool for Visualization and Complexity Management of SBGN Process Description Maps},
+    year = {2015},
+    %month = {06},
+    volume = {10},
+    %url = {https://doi.org/10.1371/journal.pone.0128985},
+    pages = {1-14},
+    number = {6},
+}
