--- a/2methods.tex
+++ b/2methods.tex
@@ -10,6 +10,4 @@ In our research, we found six SBML-Bachmann models in two different repositories
 
 We found and tested five software tools for the simulation of biological systems. \hyperlink{https://www.systemsmedicine.net/posts/jws-online-biological-systems-modelling}{JWS Online}, Systems Biology tool for the construction, modification, and simulation of kinetic models and the storage of curated models \cite{jwsonline}; on this repository was one of the found models. \hyperlink{https://cat.bio.informatik.uni-rostock.de/}{Webviewer Uni Rostock} (CombineArchiveWeb), a tool to visualize and manage COMBINE files \cite{combine}; this is the goal application of our project. \hyperlink{http://copasi.org/}{COPASI}, a software application for the simulation and analysis of biochemical networks and their dynamics \cite{copasi}. \hyperlink{https://sed-ml.org/}{SED-ML}, a suite of tools for creating, editing, simulating and validating SED-ML files \cite{sedml}. \hyperlink{https://tellurium.readthedocs.io/en/latest/}{Tellurium},  a tool to model, simulate and analyze biochemical systems \cite{tellurium}.
 
-One of the objectives of our project was to provide a standardized graphical representation of the Bachmann model based on the SBGN.
-Consequently, we performed research but we do not found any SBGN of this model. Therefore, we decided to create an SBGN map based on Le Novère \cite{sbgnnovere} and Touré \textit{et. al.} \cite{sbgntoure}.
-In this step, we select the SBGN language and lastly, we created the Process Description (PD) map with the software Newt Editor \cite{newteditor}.  To validate the SBGN we used the feature LibSBGN from Newt Editor as well as imported the SBGN-ML into VANTED/SBGN-ED, Krayon for SBGN, and SBGNViz. Lastly, we cleaned up the map and colored the relevant features in the model to improve the developed map.
+One of the objectives of our project was to provide a standardized graphical representation of the Bachmann model based on the SBGN. Consequently, we performed research but we do not found any SBGN of this model. Therefore, we decided to create an SBGN network \textit{de novo} based on Le Novère \cite{sbgnnovere} and Touré \textit{et. al.} \cite{sbgntoure}. In this step, we select the SBGN language, and lastly, we created the Process Description (PD) map with the web tool Newt Editor (v3.0.3) \cite{newteditor}. To validate the SBGN-ML we imported it into several software and libraries, LibSBGN from Newt Editor, the open-source software Visualisation and Analysis of Networks containing Experimental Data (VANTED) \cite{vanted}, Krayon for SBGN \cite{krayon}, and SBGNViz \cite{sbgnviz}. Lastly, we cleaned up the map and colored the relevant features in the model to improve the developed map.
