Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -55,7 +55,7 @@
 	\small $^{1}$Medical School - Charité – University Medicine Berlin, Berlin, Germany \\
 	\small $^{2}$Medical Center - University of Freiburg, University Emergency Department, Freiburg, Germany \\
 	\small $^{3}$University Medical Center of the Johannes Gutenberg University Mainz, Mainz, Germany \\
-	\small $^{4}$Master - Biomedical Informatics and Data Science (BIDS), Hochschule Mannheim – University of Applied Sciences in collaboration with the Medical Informatics for Research and Care in University Medicine (MIRACUM Consortium), Germany \\
+	\small $^{4}$Master Program - Biomedical Informatics and Data Science (BIDS), Graduate School Rhein-Neckar in collaboration with the Medical Informatics for Research and Care in University Medicine (MIRACUM Consortium), Germany \\
 }
 
 \hrule
@@ -85,4 +85,5 @@
 \nocite{*}           %  Die gesamte Literaturbibliothek wird eingefügt
 \printbibliography 
 
+\input{6appendices}
 \end{document}
