New titlepage ... no more warnings :-)

--- a/1introduction.tex
+++ b/1introduction.tex
@@ -1,8 +1,8 @@
 \section*{Introduction}
-\begin{enumerate}
-    \item Update von Dagmars paper
-    \item Orientierung an equator network (STARE-HI)
-\end{enumerate}
+%\begin{enumerate}
+%    \item Update von Dagmars paper
+%    \item Orientierung an equator network (STARE-HI)
+%\end{enumerate}
 
 \subsubsection*{Scientific background}
 The increase of size and complexity of simulation studies in systems biology and systems medicine proposes new challenges to sharing reproducible results. The Computational Modeling in Biology Network (COMBINE) improves the coordination of standard formats for several features of simulation studies, such as Systems Biology Markup Language (SBML), CellML, Systems Biology Graphical Notation (SBGN), Systems Biology Graphical Notation (SBGN), and Systems Biology Result Markup Language (SBRML). These standards aim to encode, simulate and visualize biological models \cite{combine}.
