--- a/main.tex
+++ b/main.tex
@@ -43,30 +43,11 @@
   \textbf{\textit{Keywords: }} #1
 }
 
-\title{An update of the Bachmann COMBINE archive}
-
-
-\date{} % Comment this line to show today's date
-
 \begin{document}
-\maketitle
 
-  \noindent\author{\textbf{Oliver H\"olsken$^{1,4}$~\orcidlink{0000-0001-6086-9275}, Felix Patricius Hans$^{2,4}$~\orcidlink{0000-0002-7164-7624}, Sami Habib$^{3,4}$~\orcidlink{0000-0003-4087-2869}, Abel Hodelin Hernandez$^{3,4}$~\orcidlink{0000-0002-4295-9899}} \\ \\
-	\small $^{1}$Medical School - Charité – University Medicine Berlin, Berlin, Germany \\
-	\small $^{2}$Medical Center - University of Freiburg, University Emergency Department, Freiburg, Germany \\
-	\small $^{3}$University Medical Center of the Johannes Gutenberg University Mainz, Mainz, Germany \\
-	\small $^{4}$Master Program - Biomedical Informatics and Data Science (BIDS), Graduate School Rhein-Neckar in collaboration with the Medical Informatics for Research and Care in University Medicine (MIRACUM Consortium), Germany \\
-}
-
-\hrule
-\input{0abstract}
- \hspace{10pt}
-
-\noindent\keywords{Systems Biology, Computational Biology, Data Science, Medical Informatics, COMBINE, containers, data}
-
-\hrule
-
+\include{00titlepage}
 \newpage
+
 \input{1introduction}
 
 \input{2methods}
