A little bit fancy :-)

--- a/1introduction.tex
+++ b/1introduction.tex
@@ -4,13 +4,13 @@
 %    \item Orientierung an equator network (STARE-HI)
 %\end{enumerate}
 
-\subsubsection*{Scientific background}
+\subsection*{Scientific background}
 The increase of size and complexity of simulation studies in systems biology and systems medicine proposes new challenges to sharing reproducible results. The Computational Modeling in Biology Network (COMBINE) improves the coordination of standard formats for several features of simulation studies, such as Systems Biology Markup Language (SBML), CellML, Systems Biology Graphical Notation (SBGN), Systems Biology Graphical Notation (SBGN), and Systems Biology Result Markup Language (SBRML). These standards aim to encode, simulate and visualize biological models \cite{combine}.
 
 On the other side, GitHub has been used as an essential common platform for managing software projects and supporting collaborative development. Now a day some educational projects have begun to adopt it for hosting and managing course content because it gets transparency features to create, reuse, and remix materials; and to monitor activity on assignments and projects \cite{github}.
 
-\subsubsection*{Rationale}
+\subsection*{Rationale}
 
-\subsubsection*{Objectives}
+\subsection*{Objectives}
 %Sami und Felix machen Ergebnisse\\
 %Oliver und Abel machen Methoden
