--- a/4conclusions.tex
+++ b/4conclusions.tex
@@ -1,1 +1,9 @@
 \section*{Conclusions}
+
+"The conclusion summarizes the main findings, discusses the impact of the findings and
+how they relate back to the big picture described in the introduction section, gives
+recommendations by the author and provides a short outlook for future research."
+
+In summary, we were able to reproduce many, but not all experiments. Several parameters required to reproduce individual plots were not included in the model itself and would have to be added manually based on details provided in the supplementary material. The specific problems encountered while attempting to reproduce the experiments will be addressed in separate GitHub issues for future reference. 
+\\
+\\
