--- a/5abbreviation.tex
+++ b/5abbreviation.tex
@@ -1,1 +1,12 @@
-\appendix 
+\subsection*{Acronyms}
+    \begin{acronym}[acrmeta]
+        \acro{combine}[COMBINE]{Computational Modeling in Biology Network}
+        \acro{sedml}[SED-ML]{Simulation Experiment Description Markup Language}
+        \acro{sbgn}[SBGN]{Systems Biology Graphical Notation}
+        \acro{sbgnml}[SBGN-ML]{Systems Biology Graphical Notation Markup Language}
+        \acro{sbml}[SBML]{Systems Biology Markup Language}
+        \acro{sbrml}[SBRML]{Systems Biology Result Markup Language}
+        \acro{pd}[PD]{Process Description}
+        \acro{copasi}[COPASI]{COmplex PAthway SImulator}
+        \acro{vanted}[VANTED]{Visualisation and Analysis of Networks containing Experimental Data}
+    \end{acronym}
