--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -46,16 +46,17 @@
 }
 
 @article{copasi,
-	author = {Sahle, Sven  and Mendes, Pedro  and Hoops, Stefan  and Kummer, Ursula },
-	title = {A new strategy for assessing sensitivities in biochemical models},
-	journal = {Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences},
-	volume = {366},
-	number = {1880},
-	pages = {3619-3631},
-	year = {2008},
-	doi = {10.1098/rsta.2008.0108},
-	%URL = {https://royalsocietypublishing.org/doi/abs/10.1098/rsta.2008.0108},
-	%eprint = {https://royalsocietypublishing.org/doi/pdf/10.1098/rsta.2008.0108},   
+	author = {Hoops, Stefan and Sahle, Sven and Gauges, Ralph and Lee, Christine and Pahle, Jürgen and Simus, Natalia and Singhal, Mudita and Xu, Liang and Mendes, Pedro and Kummer, Ursula},
+    title = "{COPASI—a COmplex PAthway SImulator}",
+    journal = {Bioinformatics},
+    volume = {22},
+    number = {24},
+    pages = {3067-3074},
+    year = {2006},
+    month = {10},
+    doi = {10.1093/bioinformatics/btl485},
+    url = {https://doi.org/10.1093/bioinformatics/btl485},
+    %eprint = {https://academic.oup.com/bioinformatics/article-pdf/22/24/3067/546592/btl485.pdf},  
 }
 
 @article{sedml,
