--- a/discussion.tex
+++ b/discussion.tex
@@ -6,3 +6,19 @@ by the authors themselves. Any lessons learned - both with respect to study ques
 methodology - should be reported for others to learn from.
 A structured discussion as proposed below is often not required by the journal but it will ease the
 writing as well as the reading."  
+
+
+\subsection*{Answers to study questions}
+
+\subsection*{Strength and weaknesses of the study}
+
+\subsection*{Results in relation to other studies}
+
+\subsection*{Meaning and generalisability of the study}
+
+\subsection*{Unanswered and new questions}
+
+
+\subsection{Generation of SED-ML files}
+
+
