--- a/main.tex
+++ b/main.tex
@@ -51,7 +51,7 @@
 \noindent\small \textbf{Funding:} None.\\
 \noindent\small \textbf{Acknoledgement:}...
 
-\input{5abbreviation.tex}
+\input{5abbreviation}
 
 \nocite{*}           %  Die gesamte Literaturbibliothek wird eingefügt
 \printbibliography 
