some fancy changes

--- a/1introduction.tex
+++ b/1introduction.tex
@@ -1,18 +1,17 @@
 \section*{Introduction}
-%\begin{enumerate}
-%    \item Update von Dagmars paper
-%    \item Orientierung an equator network (STARE-HI)
-%\end{enumerate}
+
 
 \subsection*{Scientific background}
-The increase of size and complexity of simulation studies in systems biology and systems medicine proposes new challenges to sharing reproducible results. The \ac{combine} improves the coordination of standard formats for several features of simulation studies, such as \ac{sbml}, CellML, \ac{sbgn}, and \ac{sbrml}. These standards aim to encode, simulate and visualize biological models \cite{combine}.
+The increase in size and complexity of simulation studies in systems biology and systems medicine proposes new challenges to sharing reproducible results. The \ac{combine} improves the coordination of standard formats for several features of simulation studies, such as \ac{sbml}, CellML, \ac{sbgn}, and \ac{sbrml}. These standards aim to encode, simulate and visualize biological models \cite{combine}.
 
 On the other side, GitHub has been used as an essential common platform for managing software projects and supporting collaborative development. Now a day some educational projects have begun to adopt it for hosting and managing course content because it gets transparency features to create, reuse, and remix materials; and to monitor activity on assignments and projects \cite{github}.
 
-The purpose of this study is to provide...
 
-\subsection*{Rationale}
+\subsection*{Rationale for this study}
+Given the background of an only partially archived  systems biology simulation model the master degree class for \ac{bids} at the Graduate School Rhein-Neckar  in  collaboration  with  the  Medical  Informatics  for  Research  and  Care  in  University Medicine (MIRACUM Consortium) in Germany offered the unique opportunity to create a fully featured archive both for educational purposes and for scientific completion.
 
 \subsection*{Objectives}
+The purpose of this study is to provide a fully featured \acs{combine}-archive including all simulation figures and easy to access simulation data. The secondary aim was to create an easy to use guideline on how to approach the compilation of a \acs{combine} archive out of an existing simulation model.
+
 %Sami und Felix machen Ergebnisse\\
 %Oliver und Abel machen Methoden
