--- a/5abbreviation.tex
+++ b/5abbreviation.tex
@@ -1,5 +1,6 @@
 \subsection*{Acronyms}
     \begin{acronym}[acrmeta]
+        \acro{bids}[BIDS]{Biomedical Informatics and Data Science}
         \acro{combine}[COMBINE]{Computational Modeling in Biology Network}
         \acro{sedml}[SED-ML]{Simulation Experiment Description Markup Language}
         \acro{sbgn}[SBGN]{Systems Biology Graphical Notation}
