--- a/main.tex
+++ b/main.tex
@@ -37,13 +37,13 @@
 
 \include{00titlepage}
 \newpage
-
+\pagenumbering{arabic}
 \input{1introduction}
 
 \input{2methods}
 
 \input{3results}
-
+\input{31discussion}
 \input{4conclusions}
 
 \noindent\small \textbf{Authors' contribution:} The authors contributed equally to this work. \\ 
