study type in mehtods

--- a/1introduction.tex
+++ b/1introduction.tex
@@ -8,10 +8,10 @@ On the other side, GitHub has been used as an essential common platform for mana
 
 
 \subsection*{Rationale for this study}
-Given the background of an only partially archived  systems biology simulation model the master degree class for \ac{bids} at the Graduate School Rhein-Neckar  in  collaboration  with  the  Medical  Informatics  for  Research  and  Care  in  University Medicine (MIRACUM Consortium) in Germany offered the unique opportunity to create a fully featured archive both for educational purposes and for scientific completion.
+Given the background of an only partially archived  systems biology simulation model the master degree class for \ac{bids} at the Graduate School Rhein-Neckar  in  collaboration  with  the  Medical  Informatics  for  Research  and  Care  in  University Medicine (MIRACUM Consortium) in Germany offered the unique opportunity to create a fully featured archivea nd reproduce the simulation content both for educational purposes and for scientific completion. 
 
 \subsection*{Objectives}
-The purpose of this study is to provide a fully featured \acs{combine}-archive including all simulation figures and easy to access simulation data. The secondary aim was to create an easy to use guideline on how to approach the compilation of a \acs{combine} archive out of an existing simulation model.
+The purpose of this study is to provide a fully featured \acs{combine}-archive including all simulation figures and easy to access simulation data. The secondary aim was to create an easy to use guideline on how to approach the compilation of a \acs{combine} archive out of an existing simulation model. ist combine format geeigent? welceh tools funktionieren gut?
 
 %Sami und Felix machen Ergebnisse\\
 %Oliver und Abel machen Methoden
