--- a/2methods.tex
+++ b/2methods.tex
@@ -1,6 +1,6 @@
 \section*{Materials and methods} \label{matmet}
 
-We aimed to generate a fully featured \ac{combine} Archive of a dynamic pathway model investigating the role of suppressor of cytokine (SOCS) family members in JAK2/STAT5 signaling \cite{bachmannmodel}. Generation of the \ac{combine} Archive was performed in accordance with a recently published guideline from Schwarm and Waltemath \cite{combine}.
+In this case study we aimed to generate a fully featured \ac{combine} Archive of a dynamic pathway model investigating the role of suppressor of cytokine (SOCS) family members in JAK2/STAT5 signaling \cite{bachmannmodel}. Generation of the \ac{combine} Archive was performed in accordance with a recently published guideline from Schwarm and Waltemath \cite{combine}.
 
 The purpose of this project was divided into four groups. The tasks of each of them were the management of a documentation platform, review of exiting materials, comparison of provided models, graphical representation, and supply of a model script.
 
