Updates from Overleaf

--- a/1introduction.tex
+++ b/1introduction.tex
@@ -6,6 +6,8 @@ The increase in size and complexity of simulation studies in systems biology and
 
 On the other side, GitHub has been used as an essential common platform for managing software projects and supporting collaborative development. Now a day some educational projects have begun to adopt it for hosting and managing course content because it gets transparency features to create, reuse, and remix materials; and to monitor activity on assignments and projects \cite{github}.
 
+Warum sind combine archives cool und wichtig?
+
 
 \subsection*{Rationale for this study}
 Given the background of an only partially archived  systems biology simulation model the master degree class for \ac{bids} at the Graduate School Rhein-Neckar  in  collaboration  with  the  Medical  Informatics  for  Research  and  Care  in  University Medicine (MIRACUM Consortium) in Germany offered the unique opportunity to create a fully featured archivea nd reproduce the simulation content both for educational purposes and for scientific completion. 
