--- a/1introduction.tex
+++ b/1introduction.tex
@@ -2,15 +2,21 @@
 
 
 \subsection*{Scientific background}
-The increase in size and complexity of simulation studies in systems biology and systems medicine proposes new challenges to sharing reproducible results. The \ac{combine} improves the coordination of standard formats for several features of simulation studies, such as \ac{sbml}, CellML, \ac{sbgn}, and \ac{sbrml}. These standards aim to encode, simulate and visualize biological models \cite{combine}.
+\subsubsection*{The COMBINE archive format}
+The increase in size and complexity of simulation studies in systems biology and systems medicine proposes new challenges to sharing reproducible results. The \ac{combine} archive improves the coordination of standard formats for several features of simulation studies, such as \ac{sbml}, CellML, \ac{sbgn}, and \ac{sbrml}. These standards aim to encode, simulate and visualize biological models \cite{combine}. 
 
-On the other side, GitHub has been used as an essential common platform for managing software projects and supporting collaborative development. Now a day some educational projects have begun to adopt it for hosting and managing course content because it gets transparency features to create, reuse, and remix materials; and to monitor activity on assignments and projects \cite{github}.
+As a result a \ac{combine} archive offers the unique opportunity to not only reproduce simulation results but also to access comprehensive metadata such as author information, publication IDs (e.g. \ac{doi}) and simulation details in one single file. The vast majority of this information usually  is stored in different data formats that require a bundle of software tools to handle. Combine instead brings a single executable file which is easy to access and comes with proper provenience information.
 
-Warum sind combine archives cool und wichtig?
+It is obvious that this creates a much higher accessibility of complex data that derives from systems medicine and systems biology for researchers and provides a better reproducibility of scientific results.
+
+\subsubsection*{Agile working}
+Agile working has been a major drive for the evolution in working environments especially in information technologies. New definitions on how, where, with whom and when collaboration and the completion of tasks is done are enabled by digital cloud solutions and co-working platforms that integrate the allocation of tasks, versioning of content and the ad-hoc foramtion of teams. GitHub has been used as an essential common platform for managing software projects and supporting collaborative development. Now a day some educational projects have begun to adopt it for hosting and managing course content because it gets transparency features to create, reuse, and remix materials; and to monitor activity on assignments and projects \cite{github}. In the development of this COMBINE archive we dedicated ourselves to the \acs{fair}-principles and therefore built a completely publicly traceable working environment in git, that can be accessed via the link given in the appendices.
+
+
 
 
 \subsection*{Rationale for this study}
-Given the background of an only partially archived  systems biology simulation model the master degree class for \ac{bids} at the Graduate School Rhein-Neckar  in  collaboration  with  the  Medical  Informatics  for  Research  and  Care  in  University Medicine (MIRACUM Consortium) in Germany offered the unique opportunity to create a fully featured archivea nd reproduce the simulation content both for educational purposes and for scientific completion. 
+Given the background of the only partially reproducible Bachman model the enviroment of the master degree class for \ac{bids} at the Graduate School Rhein-Neckar  in  collaboration  with  the  Medical  Informatics  for  Research  and  Care  in  University Medicine (MIRACUM Consortium) in Germany offered the unique opportunity to create a fully featured archive and reproduce the simulation content both for educational purposes and for scientific completion of the original work. 
 
 \subsection*{Objectives}
 The purpose of this study is to provide a fully featured \acs{combine}-archive including all simulation figures and easy to access simulation data. The secondary aim was to create an easy to use guideline on how to approach the compilation of a \acs{combine} archive out of an existing simulation model. ist combine format geeigent? welceh tools funktionieren gut?
