--- a/5abbreviation.tex
+++ b/5abbreviation.tex
@@ -2,6 +2,8 @@
     \begin{acronym}[acrmeta]
         \acro{bids}[BIDS]{Biomedical Informatics and Data Science}
         \acro{combine}[COMBINE]{Computational Modeling in Biology Network}
+        \acro{doi}[DOI]{Digital Object Identifier}
+        \acro{fair}[FAIR]{Findable, Accessible, Interoperable, Reusable}
         \acro{sedml}[SED-ML]{Simulation Experiment Description Markup Language}
         \acro{sbgn}[SBGN]{Systems Biology Graphical Notation}
         \acro{sbgnml}[SBGN-ML]{Systems Biology Graphical Notation Markup Language}
