--- a/2methods.tex
+++ b/2methods.tex
@@ -1,16 +1,16 @@
 \section*{Materials and methods} \label{matmet}
 
-In this case study we aimed to generate a fully featured \ac{combine} Archive of a dynamic pathway model investigating the role of suppressor of cytokine (SOCS) family members in JAK2/STAT5 signaling \cite{bachmannmodel}. Generation of the \ac{combine} Archive was performed in accordance with a recently published guideline from Schwarm and Waltemath \cite{combine}.
+In this case study we aimed to develop a fully featured \ac{combine} Archive of a dynamic pathway model investigating the role of suppressor of cytokine (SOCS) family members in JAK2/STAT5 signaling \cite{bachmannmodel}. Generation of the \ac{combine} Archive was performed in accordance with a recently published guideline from Schwarm and Waltemath \cite{combine}.
 
-The purpose of this project was divided into four groups. The tasks of each of them were the management of a documentation platform, review of exiting materials, comparison of provided models, graphical representation, and supply of a model script.
+The tasks of this project were was distributed on  four teams and split into the sections 'the management of a documentation platform', 'review of existing materials', 'comparison of provided models', 'graphical representation', and 'supply of a model script'.
 
-\subsection*{Set up of a collaborative working environment}
-To provide the model from Bachmann \textit{et. al.}\cite{bachmannmodel} as a Fully Featured \ac{combine} Archive, we have created a public repository using the open-source platform GitHub, with a CC0-1.0 License. We chose GitHub as a data management platform to supervise the course of the project because it provides an intuitive and easy customizable environment, along with some features for documentation, and agile project management \cite{github}. This repository contains the proposal directory's structure from Scharm \& Waltemath \cite{combine} with the directories documentation, model, experiment, and result.
+\subsection*{Setup of an agile working environment}
+To provide the model from Bachmann et. al. \cite{bachmannmodel} as a Fully Featured \ac{combine} Archive, we created a public repository using the open-source platform GitHub, with a CC0-1.0 License. We chose GitHub as a data management platform to supervise the course of the project because it provides an intuitive and easy customizable environment, along with some features for documentation, and agile project management \cite{github}. This repository contains the proposal directory's structure from Scharm \& Waltemath \cite{combine} with the directories documentation, model, experiment, and result.
 
 To achieve this goal, we research the literature about the Bachmann model and the \ac{combine} Archive, along with modeling file formats, checking the reproducibility of the \ac{combine} structure and software tools that had been used. In addition, we established communication channels, developed a rough schedule, provided a template for documentation, and periodically reviewed intermediate deliverables.
 
 \subsection*{Model selection}
-In our research, we found six \ac{sbml}-Bachmann models in two different repositories, \hyperlink{https://www.systemsmedicine.net/posts/jws-online-biological-systems-modelling}{JWS Online} and \hyperlink{https://www.ebi.ac.uk/biomodels/}{BioModels} (see Results). We chose the last model from 14th November 2019 to perform other tasks in our project, because it provides complementary files for the simulation.
+In our research, we found six \ac{sbml}-Bachmann models in two different repositories, \hyperlink{https://www.systemsmedicine.net/posts/jws-online-biological-systems-modelling}{JWS Online} and \hyperlink{https://www.ebi.ac.uk/biomodels/}{BioModels} (see Results). We chose the latest model from 14th November 2019 to perform other tasks in our project, because it provides complementary files for the simulation.
 
 \subsection*{Software tools and Versions}
 We found and tested five software tools for the simulation of biological systems:
