FAIR acronym commented (it is not used in the document)

--- a/5abbreviation.tex
+++ b/5abbreviation.tex
@@ -3,7 +3,7 @@
         \acro{bids}[BIDS]{Biomedical Informatics and Data Science}
         \acro{combine}[COMBINE]{Computational Modeling in Biology Network}
         \acro{doi}[DOI]{Digital Object Identifier}
-        \acro{fair}[FAIR]{Findable, Accessible, Interoperable, Reusable}
+        %\acro{fair}[FAIR]{Findable, Accessible, Interoperable, Reusable}
         \acro{sedml}[SED-ML]{Simulation Experiment Description Markup Language}
         \acro{sbgn}[SBGN]{Systems Biology Graphical Notation}
         \acro{sbgnml}[SBGN-ML]{Systems Biology Graphical Notation Markup Language}
